--- a/SideMenu2/Base.lproj/Main.storyboard
+++ b/SideMenu2/Base.lproj/Main.storyboard
@@ -1,24 +1,178 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Reveal View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SWRevealViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="SWRevealViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <segue destination="pX5-0q-0iS" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="y4g-WR-pcn"/>
+                        <segue destination="qTd-jh-NZh" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="oJ8-LS-tkX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-293" y="138"/>
+        </scene>
+        <!--Side Menu View Controller-->
+        <scene sceneID="Cwi-Jg-vyO">
+            <objects>
+                <viewController storyboardIdentifier="SideMenuViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="pX5-0q-0iS" customClass="SideMenuViewController" customModule="SideMenu2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nHV-q3-Par">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yFU-zC-ZTq">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="menuCell" id="vNr-Ok-rQO">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vNr-Ok-rQO" id="SYx-ZR-PVY">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="pX5-0q-0iS" id="A1m-2b-t7l"/>
+                                    <outlet property="delegate" destination="pX5-0q-0iS" id="7T0-Ub-0zr"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yFU-zC-ZTq" firstAttribute="top" secondItem="qir-bK-OoG" secondAttribute="top" id="GLZ-Rw-ni0"/>
+                            <constraint firstItem="yFU-zC-ZTq" firstAttribute="trailing" secondItem="qir-bK-OoG" secondAttribute="trailing" id="IeH-CZ-B76"/>
+                            <constraint firstItem="qir-bK-OoG" firstAttribute="bottom" secondItem="yFU-zC-ZTq" secondAttribute="bottom" id="i8S-zf-TwF"/>
+                            <constraint firstItem="yFU-zC-ZTq" firstAttribute="leading" secondItem="qir-bK-OoG" secondAttribute="leading" id="ict-fz-eKx"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="qir-bK-OoG"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wmy-ZO-Mmd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="818" y="-118"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Sjl-Ki-zpc">
+            <objects>
+                <viewController storyboardIdentifier="ViewController" id="lOG-pP-5Bg" customClass="ViewController" customModule="SideMenu2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="B5K-UD-5Oz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.6782938744" green="0.91869972870000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="GPG-If-M2o"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="CJo-wt-lBS">
+                        <barButtonItem key="leftBarButtonItem" title="Menu" id="zbd-Cj-XS1"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="hamburguerButton" destination="zbd-Cj-XS1" id="lbl-Wq-LVM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PNK-ri-8yn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1584" y="587"/>
+        </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="fOq-rX-1M7">
+            <objects>
+                <viewController storyboardIdentifier="ProfileViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="v4V-Xj-Gy8" customClass="ProfileViewController" customModule="SideMenu2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VYX-U6-8rF">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S2D-m4-o2m">
+                                <rect key="frame" x="0.0" y="20" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wy1-A6-jg9">
+                                <rect key="frame" x="278" y="20" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pkE-w8-4Rv">
+                                <rect key="frame" x="0.0" y="538" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="XUH-Cs-Hrw" kind="show" id="KXD-Lx-yIA"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.82352941180000006" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ncS-hL-OUt" firstAttribute="trailing" secondItem="Wy1-A6-jg9" secondAttribute="trailing" id="1U9-Ys-o4E"/>
+                            <constraint firstItem="Wy1-A6-jg9" firstAttribute="top" secondItem="ncS-hL-OUt" secondAttribute="top" id="6bo-Wl-21R"/>
+                            <constraint firstItem="ncS-hL-OUt" firstAttribute="bottom" secondItem="pkE-w8-4Rv" secondAttribute="bottom" id="T12-22-eX8"/>
+                            <constraint firstItem="pkE-w8-4Rv" firstAttribute="leading" secondItem="ncS-hL-OUt" secondAttribute="leading" id="cl1-Xz-bVT"/>
+                            <constraint firstItem="S2D-m4-o2m" firstAttribute="leading" secondItem="ncS-hL-OUt" secondAttribute="leading" id="pKs-mu-E3A"/>
+                            <constraint firstItem="S2D-m4-o2m" firstAttribute="top" secondItem="ncS-hL-OUt" secondAttribute="top" id="v1g-7j-f6d"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ncS-hL-OUt"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="kZX-3l-AZ0">
+                        <barButtonItem key="leftBarButtonItem" title="Menu" id="lNO-X7-QfI"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="hamburguerButton" destination="lNO-X7-QfI" id="rlV-Ac-1iS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hQU-Uj-r96" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1583" y="1272"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="FEg-Jl-uwd">
+            <objects>
+                <viewController id="XUH-Cs-Hrw" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fET-Lh-UzG">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="F02-P1-9zY"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UQ9-gl-6Wj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2441" y="1272"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8YU-hh-QuQ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qTd-jh-NZh" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7G4-ak-iRO">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="lOG-pP-5Bg" kind="relationship" relationship="rootViewController" id="od0-Vd-lYD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fi9-ch-2Ru" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="795" y="588"/>
         </scene>
     </scenes>
 </document>
